--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <h1 class="mt-10">Welcome to my homepage</h1>
             </div>
             <div class="row">
-                <div class="col-sm-6 animated fadeIn">
+                <div class="col-sm-6 animated fadeIn mb-20">
                     <div class="options-container fx-item-zoom-in fx-overlay-zoom-in">
                         <img class="img-fluid options-item" src="image/scren/autotable.png" alt="autotable">
                         <div class="options-overlay bg-primary-dark-op">
@@ -46,7 +46,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-6 animated fadeIn">
+                <div class="col-sm-6 animated fadeIn mb-20">
                     <div class="options-container fx-item-zoom-in fx-overlay-zoom-in">
                         <img class="img-fluid options-item" src="image/scren/autotable.png" alt="autotable">
                         <div class="options-overlay bg-primary-dark-op">
